src/containers/Contact/index.css
.contact-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 3rem;
  padding: 5rem 0;
  background: linear-gradient(
    to right,
    rgb(162, 1, 133),
    rgb(65 21 186),
    rgb(33 23 61)
  );
}

.contact-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 6rem;
  place-items: center;
  max-width: 90rem;
  margin: 0 auto;
}
@media (max-width: 768px) {
  .contact-container {
    grid-template-columns: 1fr;
    gap: 2rem;
  }
}
/* @media (max-width: 425px) {
  .contact-container {
    grid-template-columns: 1fr;
  }
} */
.contact-container__img {
  width: 100%;
  max-width: 60rem;
  border-radius: 2rem;
}
.contact-form {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}
.contact-form h3 {
  font-size: var(--lg);
  /* text-transform: uppercase; */
  color: var(--secondary-color);
  text-align: left;
}
.contact-form span {
  color: var(--primary-color);
  font-size: var(--md);
  font-weight: bold;
  /* text-transform: uppercase; */
}
.contact-form form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}
.contact-form form input,
.contact-form form textarea {
  background-color: var(--background-color);
  color: var(--soft-purple);
  border: none;
  padding: 1.4rem;
  font-size: var(--md);
  border-radius: 1rem;
  outline: none;
  resize: none;
}
/* .contact-form form input,
.contact-form form textarea:-internal-autofill-selected {
  background-color: var(--background-color) !important;
  background-image: none !important;
  color: var(--soft-purple) !important;
} */
.contact-form form button {
  max-width: 20rem;
  padding: 1.4rem;
  border-radius: 1rem;
  background-color: var(--primary-color);
  border: none;
  color: var(--secondary-color);
  text-transform: uppercase;
  font-weight: bold;
  cursor: pointer;
}
.contact-form form input:hover {
  box-shadow: 0px 1px 8px var(--primary-color);
  outline: solid 1px var(--primary-color);
  transition-property: box-shadow;
  transition-duration: 0.5s;
}
.contact-form form textarea:hover {
  box-shadow: 0px 1px 8px var(--primary-color);
  transition-property: box-shadow;
  transition-duration: 0.5s;
  outline: solid 1px var(--primary-color);
}
.contact-form form button:hover {
  box-shadow: 0px 1px 8px var(--primary-color);
}

